--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 -->
 	<groupId>com.alibaba</groupId>
 	<artifactId>fastjson</artifactId>
-	<version>1.2.31-criteo</version>
+	<version>1.2.31-criteo1</version>
 
 	<packaging>jar</packaging>
 	<name>fastjson</name>
